fix: fix DoubleCard margin bottom on mobile

--- a/src/1_Components/Cards/Variants/DoubleCard/DoubleCard.module.scss
+++ b/src/1_Components/Cards/Variants/DoubleCard/DoubleCard.module.scss
@@ -7,6 +7,7 @@
   @include phone {
     padding: 40px 20px;
     gap: 32px;
+    margin-bottom: 0 !important;
   }
 
   @include desktop {
